--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(JPos_Controller)
 add_subdirectory(Example_Leg_InvDyn)
 add_subdirectory(MIT_Controller)
 add_subdirectory(MiniCheetahSpi_Controller)
+add_subdirectory(ControllerBridge)
