--- a/user/MIT_Controller/CMakeLists.txt
+++ b/user/MIT_Controller/CMakeLists.txt
@@ -8,16 +8,16 @@ include_directories(SYSTEM "../../third-party/qpOASES/include")
 include_directories("../../third-party/ParamHandler")
 
 include_directories("../../lcm-types/cpp")
-include_directories("/usr/local/include/lcm/")   # lcm includes
-include_directories("/usr/local/include/eigen3")   # lcm includes
+include_directories("/usr/local/include/lcm/") # lcm includes
+include_directories("/usr/include/eigen3") # lcm includes
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${PROJECT_SOURCE_DIR})
 
 file(GLOB_RECURSE sources
-"./*.cpp"
-"FSM_States/*.cpp" 
-"Controllers/BalanceController/*.cpp" 
-"Controllers/convexMPC/*.cpp")
+    "./*.cpp"
+    "FSM_States/*.cpp"
+    "Controllers/BalanceController/*.cpp"
+    "Controllers/convexMPC/*.cpp")
 
 add_subdirectory(Controllers/WBC)
 add_subdirectory(Controllers/WBC_Ctrl)
